# roode

./: ARCHITECTURE_MCP_MODES_SERVER.md  FEATURE_GAPS_ANALYSIS.md  README.md  TOOL_EXECUTION_DIAGNOSIS.md  jekyll_docs_checkpoint.json  pyproject.toml  workflow_checkpoint.json
docs/: BEDROCK_INTEGRATION.md  MCP_MODES_SERVER_API.md  MCP_MODES_SERVER_INTEGRATION.md  MCP_MODES_SERVER_USER_GUIDE.md  SYSTEM_FLOW.md  modes.md
docs-foo/docs-foo/: DOCUMENTATION_PLAN.md  Gemfile  README.md  _config.yml  index.md
docs-foo/docs-foo/_includes/: code_example.html  footer.html  header.html  sidebar.html
docs-foo/docs-foo/_layouts/: api.html  default.html  home.html  page.html
docs-foo/docs-foo/api/: api-conventions.md  core.md  index.md
docs-foo/docs-foo/examples/: code-snippets.md  index.md
docs-foo/docs-foo/examples/advanced/: exampleA.md
docs-foo/docs-foo/examples/basic/: example1.md
docs-foo/docs-foo/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs-foo/docs-foo/guides/: basic-app.md  best-practices.md  index.md  troubleshooting.md
docs/docs/api/: api-conventions.md  content-management.md  index.md  user-management.md  workflow.md
docs/docs/guides/: best-practices.md  index.md  troubleshooting.md
docs/examples/: index.md
docs/examples/basic/: example1.md  example2.md
examples/: README.md  agentic_example.py  basic_usage.py  bedrock_example.py  bedrock_jekyll_docs_generator.py  interpreter_checkpoint.json  mode_usage.py  recreate_mcp_server.py  recreate_python_interpreter.py  test_bedrock_read_file.py  workflow_config.yaml
python-repl-project/: .coverage  ARCHITECTURE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  PROJECT_STRUCTURE.md  README.md  USAGE.md  pyproject.toml  test_repl.py
python-repl-project/docs/: context_implementation_summary.md  context_module.md
python-repl-project/examples/: advanced_features.py  basic_usage.py  completion_demo.py  context_usage.py  interactive_context_demo.py
python-repl-project/src/pyrepl/: __init__.py  __main__.py  completion.py  config.py  context.py  history.py  input_handler.py  output.py  repl.py
python-repl-project/src/pyrepl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
python-repl-project/tests/: __init__.py  conftest.py  test_completion.py  test_context.py  test_history.py  test_output.py  test_repl.py
roo_code/: __init__.py  agent.py  client.py  stream.py  tools.py  types.py
roo_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
roo_code/builtin_tools/: README.md  TREE_SITTER_INTEGRATION.md  __init__.py  advanced.py  browser.py  cache.py  circuit_breaker.py  code_indexer.py  context.py  error_metrics.py  error_recovery.py  execution.py  file_operations.py  file_watcher.py  image_generator.py  image_providers.py  mcp.py  mcp_client.py  mcp_manager.py  modes.py  ollama_embedder.py  parameter_similarity.py  profiler.py  registry.py  repetition_detector.py  ripgrep.py  search.py  tree_sitter_parser.py  vector_store.py  workflow.py
roo_code/mcp/: README.md  __init__.py  __main__.py  config.py  protocol.py  resources.py  server.py  session.py  tools.py  validation.py
roo_code/modes/: __init__.py  agent.py  builtin_modes.py  config.py  orchestrator.py  task.py  tools.py
roo_code/providers/: __init__.py  anthropic.py  base.py  bedrock.py  deepseek.py  gemini.py  groq.py  mistral.py  ollama.py  openai.py  openrouter.py
tests/: test_anthropic_tool_parsing.py  test_bedrock_provider.py  test_builtin_tools.py  test_builtin_tools_context.py  test_circuit_breaker.py  test_code_indexer.py  test_error_recovery.py  test_error_recovery_integration.py  test_image_generator.py  test_image_providers.py  test_mcp_client.py  test_mcp_config.py  test_mcp_integration.py  test_mcp_integration_paper.py  test_mcp_manager.py  test_mcp_protocol.py  test_mcp_resources.py  test_mcp_server.py  test_mcp_session.py  test_mcp_tool_integration.py  test_mcp_tools.py  test_mcp_validation.py  test_ollama_embedder.py  test_parameter_similarity.py  test_repetition_detector.py  test_ripgrep.py  test_semantic_search_integration.py  test_tool_execution_flow.py  test_tool_execution_integration.py  test_tree_sitter_parser.py  test_vector_store.py
tests/fixtures/: mcp_config.json  sample.js  sample.py  sample.ts
tests/fixtures/search_test/: file1.py  file2.js  file3.md
tests/fixtures/search_test/subdir/: file4.py
tests/modes/: __init__.py  test_config.py  test_orchestrator.py  test_task.py
tests/performance/: __init__.py  benchmark_embeddings.py  benchmark_memory.py  benchmark_report.py  benchmark_tools.py
