[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roo-code"
version = "0.1.0"
description = "Python SDK for Roo Code - AI-Powered Development Tools"
readme = "README.md"
authors = [
    { name = "Roo Code Team", email = "support@roocode.com" }
]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "code", "assistant", "development", "llm"]
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.34.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "typing-extensions>=4.5.0",
    "tree-sitter>=0.21.0",
    "boto3>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
tools = [
    "playwright>=1.40.0",  # For browser automation
]
treesitter = [
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "tree-sitter-cpp>=0.22.0",
    "tree-sitter-c>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-ruby>=0.21.0",
    "tree-sitter-php>=0.22.0",
]
vector = [
    "chromadb>=0.4.0",  # Vector database for embeddings
]
all = [
    "roo-code[dev,tools,treesitter,vector]",
]

[project.urls]
Homepage = "https://github.com/RooCodeInc/Roo-Code"
Documentation = "https://docs.roocode.com"
Repository = "https://github.com/RooCodeInc/Roo-Code"
Issues = "https://github.com/RooCodeInc/Roo-Code/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["roo_code*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"